# taskerz

./: 404.html  index.html  main.py  mkdocs.yml  pyproject.toml
docs/: LLD.md  PRD.md  USAGE.md  core.md  index.md
src/tasker_client_mac/: core.py  log.py  server.py
src/taskerz/: abstra.py  cli.py  execution_strategy.py  server.py  task_manager.py  task_state.py  workday_facade.py
src/taskerz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_e2e_mock.py  test_tasker_client_mac.py  test_tasker_client_mac_api.py  test_taskerz_api.py  test_taskerz_core.py
